--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "koa-body": "^4.0.8",
     "koa-jwt": "^3.5.1",
     "koa-logger": "^3.2.0",
+    "koa-multer": "^1.0.2",
     "koa-router": "^7.4.0",
+    "koa-static": "^5.0.0",
     "koa2-cors": "^2.0.6",
     "moment": "^2.24.0",
     "mysql2": "^1.6.5",
